tui/tests/snapshots/view_snapshots__action_100x24.snap
---
source: tui/tests/view_snapshots.rs
expression: "frame(&action, Theme::Dark, 100, 24)"
---

› Summarize the release plan.
  ✓  Agent action · completed
## Release plan

  • Verify the Runtime
  • Ship with evidence

  cargo test passes.


 Approval required ─────────────────────────────────────────────────────────────────────────────────
!  Review the public request before responding.
Create one bounded local file.

Choose
› true
  false
Enter true or false.

  Enter submit response   Ctrl+Q leave safely
• Working…
› Ask a follow-up…
  Agent · Session 1
