tui/tests/snapshots/view_snapshots__action_compact_mono_40x8.snap
---
source: tui/tests/view_snapshots.rs
expression: "frame(&action, Theme::Mono, 40, 8)"
---
  ╭ Approval required ───────────────╮
  │                                  │
  │  !  Review the public request    │
  │  › true · 1/2 ↑↓                 │
  │    Enter submit response         │
  │    Ctrl+Q leave safely           │
  │                                  │
  ╰──────────────────────────────────╯
