tui/tests/snapshots/view_snapshots__action_light_100x24.snap
---
source: tui/tests/view_snapshots.rs
expression: "frame(&action, Theme::Light, 100, 24)"
---
  Session 1  ·  Agent                                                                Agent running

    › Summarize the release plan.
      ✓  Agent action · completed
    ◆ Garive       ╭ Approval required ─────────────────────────────────────────╮
      ## Release   │                                                            │
                   │  !  Review the public request before responding.           │
      • Verify th  │  Create one bounded local file.                            │
      • Ship with  │                                                            │
                   │  Choose                                                    │
      cargo test   │  › true                                                    │
                   │    false                                                   │
                   │  Enter true or false.                                      │
                   │                                                            │
                   │    Enter submit response   Ctrl+Q leave safely             │
                   │                                                            │
                   ╰────────────────────────────────────────────────────────────╯





  › Ask a follow-up…
