tui/tests/snapshots/view_snapshots__activity_stack_compact_mono_40x18.snap
---
source: tui/tests/view_snapshots.rs
expression: "frame(&activities, Theme::Mono, 40, 18)"
---
Session 1                        running

  You
    Verify the release candidate.
    ● Running strict valida… · 2 done









╭──────────────────────────────────────╮
│ Ask a follow-up…                     │
╰──────────────────────────────────────╯
  Esc cancel run
