tui/tests/snapshots/view_snapshots__activity_stack_completed_compact_mono_40x18.snap
---
source: tui/tests/view_snapshots.rs
expression: completed
---

› Verify the release candidate.
  ✓ Read file · +2













› Ask a follow-up…
  Agent · Session 1
