tui/tests/snapshots/view_snapshots__activity_stack_dark_100x24.snap
---
source: tui/tests/view_snapshots.rs
expression: "frame(&activities, Theme::Dark, 100, 24)"
---


› Verify the release candidate.

  ✓  Read file · +1 completed
  ●  Reading file















  esc to interrupt
› Ask a follow-up…
  Agent · Session 1
