tui/tests/snapshots/view_snapshots__activity_stack_light_100x24.snap
---
source: tui/tests/view_snapshots.rs
expression: "frame(&activities, Theme::Light, 100, 24)"
---
  Session 1  ·  research-age                                                         Agent running

    You
      Verify the release candidate.
      ✓  2 actions completed
      ●  Running strict validation














  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮
  │ Ask a follow-up…                                                                             │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯
    Esc cancel run
