tui/tests/snapshots/view_snapshots__activity_stack_mono_100x24.snap
---
source: tui/tests/view_snapshots.rs
expression: "frame(&activities, Theme::Mono, 100, 24)"
---


› Verify the release candidate.

  ✓  Read file · +1 completed
  ●  Reading file















  esc to interrupt
› Ask a follow-up…
  Agent · Session 1
