tui/tests/snapshots/view_snapshots__cancellation_control_responsive_matrix.snap
---
source: tui/tests/view_snapshots.rs
expression: "format!(\"===== requesting · compact mono 40x8 =====\\n{requesting}\\n\\n===== accepted · standard dark 100x24 =====\\n{awaiting}\\n\\n===== unknown · wide light 160x28 =====\\n{unknown}\")"
---
===== requesting · compact mono 40x8 =====

  • Verify the Runtime
  • Ship with evidence

  cargo test passes.

• Cancelling…
› Retained draft while cancellation

===== accepted · standard dark 100x24 =====

› Summarize the release plan.
  ✓  Agent action · completed

## Release plan

  • Verify the Runtime
  • Ship with evidence

  cargo test passes.











• Stopping…
› Retained draft while cancellation settles


===== unknown · wide light 160x28 =====

› Summarize the release plan.
  ✓  Agent action · completed

## Release plan

  • Verify the Runtime
  • Ship with evidence

  cargo test passes.















• Cancel status unknown
› Retained draft while cancellation settles
