tui/tests/snapshots/view_snapshots__command_palette_quit_dark_160x28.snap
---
source: tui/tests/view_snapshots.rs
expression: "frame(&palette, Theme::Dark, 160, 28)"
---
                                Session 1  ·  Agent
                                           ╭ Command palette · 21 commands · type to filter · ↑/↓ · Enter · Esc ────╮
                                           │    /new                Create session                                  │
                                           │    /sessions           Switch session                                  │
                                           │    /jump               unavailable · fewer than two Turns are loaded   │
                                           │    /inspect            Open Inspector                                  │
                                           │    /status             Connection details                              │
                                           │    /edit-prompt        Edit draft externally                           │
                                           │    /retry              unavailable · no unknown command                │
                                           │    /reconnect          Resume event stream                             │
                                           │    /cancel             Cancel running turn                             │
                                           │    /theme system       Follow terminal theme                           │
                                           │    /theme dark         Use dark theme                                  │
                                           │    /theme light        Use light theme                                 │
                                           │    /theme mono         Use mono theme                                  │
                                           │    /mouse auto         Use automatic mouse capture now                 │
                                           │    /mouse on           Enable mouse capture now                        │
                                           │    /mouse off          Disable mouse capture now                       │
                                           │    /copy last          Copy last completion                            │
                                           │    /copy selection     unavailable · no composer text is selected      │
                                           │    /copy session-id    Copy Session ID                                 │
                                           │    /help               Keyboard guide                                  │
                                           │  › /quit               Exit safely                                     │
                                           ╰────────────────────────────────────────────────────────────────────────╯

                                Agent running
                                › Ask a follow-up…
