tui/tests/snapshots/view_snapshots__command_palette_quit_dark_40x8.snap
---
source: tui/tests/view_snapshots.rs
expression: "frame(&palette, Theme::Dark, 40, 8)"
---
 Command palette ───────────────────────
Search  type to search
Showing 19–21 / 21 · ↑18
  /copy session-id  Copy Session ID
  /help             Keyboard guide
› /quit             Exit safely
  ↑/↓ select   Home/End edge
  Enter run   Esc close
